[tool.poetry]
name = "green-wind"
version = "0.1.0"
description = "A Python Green Energy platform that implements statistical models"
authors = ["Butch78 <matthewtyleraylward@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.1.8"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
sqlmodel = "^0.0.14"
pydantic-settings = "^2.1.0"
psycopg2 = "^2.9.9"
ipykernel = "^6.27.1"
pandas = "^2.1.4"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
polars = "^0.20.2"
polyfactory = "^2.13.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
